--- a/it-thank-you.html
+++ b/it-thank-you.html
@@ -1,33 +1,17 @@
-
 <!DOCTYPE html>
-<html lang="it">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grazie per averci contattato!</title>
+  <title>Grazie per averci contattato</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      text-align: center;
-      padding: 50px 20px;
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-    }
-    .thank-you-message {
-      font-size: 24px;
-      color: #333;
-      margin-top: 20px;
-    }
-    .logo {
-      max-width: 200px;
-      margin-bottom: 30px;
-    }
-  </style>
 </head>
-<body>
-  <img src="images/logo.png" alt="Venerdì House Logo" class="logo">
-  <p class="thank-you-message">Grazie per averci contattato, risponderemo al più presto.</p>
-  <a href="index.html"
-  class="contact-button">Torna alla Home</a>
+<body style="text-align: center; padding: 50px;">
+  <img src="logo.png" alt="Logo Venerdì House" style="max-width: 250px;">
+  <h1>Grazie per averci contattato!</h1>
+  <p>Risponderemo al più presto</p>
+  <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
+    <a href="pl.html" class="contact-button">Powrót do strony głównej</a>
+  </div>
 </body>
 </html>
