--- a/de-thank-you.html
+++ b/de-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Venerdì House Logo" style="max-width: 250px;">
   <h1>Danke für Ihre Nachricht!</h1>
-  <p>Vielen Dank für Ihre Kontaktaufnahme. Wir werden so schnell wie möglich antworten.</p>
+  <p>Wir werden so schnell wie möglich antworten.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="de.html" class="contact-button">Zurück zur Startseite</a>
   </div>
