--- a/en-thank-you.html
+++ b/en-thank-you.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank you for contacting us!</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      text-align: center;
-      padding: 50px 20px;
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-    }
-    .thank-you-message {
-      font-size: 24px;
-      color: #333;
-      margin-top: 20px;
-    }
-    .logo {
-      max-width: 200px;
-      margin-bottom: 30px;
-    }
-  </style>
 </head>
-<body>
-  <img src="images/logo.png" alt="Venerdì House Logo" class="logo">
-  <p class="thank-you-message">Thank you for contacting us, we will reply as soon as possible.</p>
-  <a href="en.html" class="contact-button">Back to Home</a>
+<body style="text-align: center; padding: 50px;">
+  <img src="logo.png" alt="Logo Venerdì House" style="max-width: 250px;">
+  <h1>Thank you for contacting us!</h1>
+  <p>We will reply as soon as possible</p>
+  <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
+    <a href="en.html" class="contact-button">Home</a>
+  </div>
 </body>
-</html> 
+</html>
