--- a/es-thank-you.html
+++ b/es-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Venerdì House Logo" style="max-width: 250px;">
   <h1>¡Gracias por contactarnos!</h1>
-  <p>Gracias por contactarnos, responderemos lo antes posible.</p>
+  <p>Responderemos lo antes posible.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="es.html" class="contact-button">Volver a la página principal</a>
   </div>
