--- a/fr-thank-you.html
+++ b/fr-thank-you.html
@@ -8,8 +8,8 @@
 </head>
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Venerdì House Logo" style="max-width: 250px;">
-  <h1>Merci pour votre message !</h1>
-  <p>Merci de nous avoir contactés, nous vous répondrons dans les plus brefs délais.</p>
+  <h1>Merci pour votre message!</h1>
+  <p>Nous vous répondrons dans les plus brefs délais.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="fr.html" class="contact-button">Retour à la page d'accueil</a>
   </div>
