--- a/it-thank-you.html
+++ b/it-thank-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <h1>Grazie per averci contattato!</h1>
   <p>Risponderemo al più presto</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
-    <a href="pl.html" class="contact-button">Powrót do strony głównej</a>
+    <a href="index.html" class="contact-button">Torna alla Home</a>
   </div>
 </body>
 </html>
