--- a/en-thank-you.html
+++ b/en-thank-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   <h1>Thank you for contacting us!</h1>
   <p>We will reply as soon as possible</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
-    <a href="en.html" class="contact-button">Home</a>
+    <a href="en.html" class="contact-button">Back to Home</a>
   </div>
 </body>
 </html>
