--- a/hu-thank-you.html
+++ b/hu-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Venerdì House Logo" style="max-width: 250px;">
   <h1>Köszönjük, hogy kapcsolatba lépett velünk!</h1>
-  <p>Köszönjük, hogy kapcsolatba lépett velünk. Hamarosan válaszolunk.</p>
+  <p>Hamarosan válaszolunk.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="hu.html" class="contact-button">Vissza a kezdőlapra</a>
   </div>
