--- a/pl-thank-you.html
+++ b/pl-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Logo Venerdì House" style="max-width: 250px;">
   <h1>Dziękujemy za kontakt!</h1>
-  <p>Dziękujemy za wiadomość. Odpowiemy najszybciej jak to możliwe.</p>
+  <p>Odpowiemy najszybciej jak to możliwe.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="pl.html" class="contact-button">Powrót do strony głównej</a>
   </div>
