--- a/ro-thank-you.html
+++ b/ro-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Sigla Venerdì House" style="max-width: 250px;">
   <h1>Vă mulțumim pentru mesaj!</h1>
-  <p>Vă mulțumim că ne-ați contactat, vă vom răspunde cât mai curând posibil.</p>
+  <p>Vă vom răspunde cât mai curând posibil.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="ro.html" class="contact-button">Înapoi la pagina principală</a>
   </div>
