--- a/sk-thank-you.html
+++ b/sk-thank-you.html
@@ -9,7 +9,7 @@
 <body style="text-align: center; padding: 50px;">
   <img src="logo.png" alt="Venerdì House Logo" style="max-width: 250px;">
   <h1>Ďakujeme za kontaktovanie!</h1>
-  <p>Ďakujeme, že ste nás kontaktovali. Odpovieme čo najskôr.</p>
+  <p>Odpovieme čo najskôr.</p>
   <div class="button-wrapper" style="text-align: center; margin-top: 30px;">
     <a href="sk.html" class="contact-button">Späť na hlavnú stránku</a>
   </div>
