--- a/fr.html
+++ b/fr.html
@@ -140,7 +140,7 @@
       <input type="checkbox" name="privacy" value="1" required />
       <span>J'accepte la <a href="privacy_fr.html">Politique de confidentialité</a></span>
     </label>
-    <button type="submit">Envoyer la demande</button>
+    <button type="submit" class="contact-button">Envoyer la demande</button>
   </form>
 </section>
 <section class="section" id="map">
