--- a/hu.html
+++ b/hu.html
@@ -139,7 +139,7 @@
       <input type="checkbox" name="privacy" value="1" required />
       <span>Elfogadom az <a href="privacy_hu.html">Adatvédelmi szabályzatot</a></span>
     </label>
-    <button type="submit">Küldés</button>
+    <button type="submit" class="contact-button">Küldés</button>
   </form>
 </section>
 <section class="section" id="map">
