--- a/pl.html
+++ b/pl.html
@@ -139,7 +139,7 @@
       <input type="checkbox" name="privacy" value="1" required />
       <span>Akceptuję <a href="privacy_pl.html">Politykę prywatności</a></span>
     </label>
-    <button type="submit">Wyślij zapytanie</button>
+    <button type="submit" class="contact-button">Wyślij zapytanie</button>
   </form>
 </section>
 <section class="section" id="map">
