--- a/ro.html
+++ b/ro.html
@@ -139,7 +139,7 @@
       <input type="checkbox" name="privacy" value="1" required />
       <span>Sunt de acord cu <a href="privacy_ro.html">Politica de Confidențialitate</a></span>
     </label>
-    <button type="submit">Trimite solicitarea</button>
+    <button type="submit" class="contact-button">Trimite solicitarea</button>
   </form>
 </section>
 <section class="section" id="map">
