--- a/sk.html
+++ b/sk.html
@@ -139,7 +139,7 @@
       <input type="checkbox" name="privacy" value="1" required />
       <span>Súhlasím so <a href="privacy_sk.html">Zásadami ochrany osobných údajov</a></span>
     </label>
-    <button type="submit">Odoslať žiadosť</button>
+    <button type="submit" class="contact-button">Odoslať žiadosť</button>
   </form>
 </section>
 <section class="section" id="map">
