--- a/en.html
+++ b/en.html
@@ -118,8 +118,8 @@
 </section>
 <section class="section" id="availability">
   <h2>Request Availability</h2>
-  <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/en-thank-you.html">
-    <input type="hidden" name="form-name" value="contact" />
+  <form name="contact-en" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/en-thank-you.html">
+    <input type="hidden" name="form-name" value="contact-en" />
     <p hidden><label>Don't fill this out: <input name="bot-field" /></label></p>
     <label for="nome">Full Name</label>
     <input type="text" id="nome" name="nome" required autocomplete="name" />
