--- a/es.html
+++ b/es.html
@@ -118,8 +118,8 @@
 </section>
 <section class="section" id="availability">
   <h2>Solicitar disponibilidad</h2>
-  <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/es-thank-you.html">
-    <input type="hidden" name="form-name" value="contact" />
+  <form name="contact-es" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/es-thank-you.html">
+    <input type="hidden" name="form-name" value="contact-es" />
     <p hidden><label>No rellenar este campo: <input name="bot-field" /></label></p>
     <label for="nome">Nombre y apellido</label>
     <input type="text" id="nome" name="nome" required autocomplete="name" />
